# ROS2_study

./: README.md  ch1_setup1.sh  ch2_Why_ROS2.txt  ch5_Turtle  ch6_topic.sh  jh_setup1.sh
Launch 파일/: Launch.txt  example_launch.py
hfproject/: CMakeLists.txt  package.xml
hfproject/src/: HumanFollowingNode.cpp  HumanFollowingNode.h
hfproject/src/MessageManager/: ServiceManager.hpp
jh_system/test_pkg_rclcpp/: CMakeLists.txt  package.xml
msg_srv_action_interface_example/: CMakeLists.txt  package.xml
msg_srv_action_interface_example/action/: ArithmeticArgument.msg
msg_srv_action_interface_example/msg/: Arithmeticoperator.srv
msg_srv_action_interface_example/srv/: ArithmeticChecker.action
python_pkg/: package.xml  setup.py
python_pkg/python_pkg/: build 관련.txt  ex_publisher.py  ex_subscriber.py
rclcpp_pkg/: CMakeLists.txt  build 관련.txt  cpp_publisher.cpp  cpp_subscriber.cpp  package.xml
강의정리/: ch10_Ros2tip.txt  ch12_node_example.txt  ch13_node  ch13_topic_programming.cpp  ch13_topic_programming.txt  ch15_action_programming.txt  ch16 Intra Process Communication.txt  ch1_build_test.sh  ch1_develop_tool.sh  ch3.1_Logging.cpp  ch4_QoS.txt  ch6_topic.sh  ch7_parameters.sh  ch9_build  ch_ROS2_DDS.txt
필요한것들(CMake, build 등)/: CMakelist 관련  Custom Message 만들기 관련.txt  ROS2 C++ rclcpp spin 관련  ROS2 C++ rclcpp spin 관련.cpp  ROS2 관련
